# Eda-Andres

./: .gitignore  Gaming plantilla.thmx  README.md  andres - Chrome.lnk
Analisis_Andres/: README.md  pyproject.toml
Analisis_Andres/data/: Steam_final.csv
Analisis_Andres/notebooks/: Abriendo_api.ipynb  Analisis_Datos.ipynb  Videojuegos_limpios.ipynb
Analisis_Andres/reports/: reportes.ipynb  reports.ipynb
Analisis_Andres/scripts/: data_cleaning.py
Img/: 40-what-are-the-other-best-platformers-since-super-mario-odyssey_.avif
analizame_el/: pyproject.toml
analizame_el/notebooks/: Analisis_Datos.ipynb
analizame_el/scripts/: data_cleaning.py
